[Polyam] Fix alignment of icon and text in Callout component
Port 87024b9e1cf7f0945eae457501899216d79c9073 to polyam-glitch

--- a/app/javascript/flavours/polyam/styles/mastodon/admin.scss
+++ b/app/javascript/flavours/polyam/styles/mastodon/admin.scss
@@ -460,6 +460,7 @@ $content-width: 840px;
     color: var(--color-text-primary);
     border-radius: 12px;
     font-size: 15px;
+    line-height: 1.3333;
     margin-bottom: 30px;
 
     .icon {
@@ -467,7 +468,7 @@ $content-width: 840px;
       border-radius: 9999px;
       width: 1rem;
       height: 1rem;
-      margin-top: -2px;
+      margin-block: -2px;
       background-color: var(--color-bg-brand-soft);
     }
 
@@ -505,7 +506,7 @@ $content-width: 840px;
 
     .title {
       font-weight: 600;
-      margin-bottom: 8px;
+      margin-bottom: 6px;
       font-size: inherit;
       line-height: inherit;
     }
